fix: account for safe area for floating buttons on mobile (#5420)

--- a/src/components/Toolbar.scss
+++ b/src/components/Toolbar.scss
@@ -32,7 +32,6 @@
     }
 
     .ToolIcon.ToolIcon__lock {
-      margin-inline-end: var(--space-factor);
       &.ToolIcon_type_floating {
         margin-left: 0.1rem;
       }
